# practica3

./: app.py  client.py  pyproject.toml
practica3/: practica.ipynb
